Minor cleanups: simplify propagateBoolean, fix imports, List.of
- propagateBooleanProperty(key, templateKey) → propagateBoolean(key)
  (key and templateKey were always identical)
- Add CliOption import, remove FQN usage in constructor
- Arrays.asList() → List.of() (Java 17 idiom)
- Remove trailing spaces from section comments

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>